Fix background image on mobile devices
Iphones were rendering the image incorrectly so I am removing the nice fixed image feature so that it will render the same across devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -318,6 +318,12 @@ header, footer {
     }
 }
 
+@media only screen and (max-width: 850px)  {
+    header {
+        background-attachment: scroll;
+    }
+}
+
 @media only screen and (min-width: 1350px)  {
     .featured-image {
         height: 650px;
